--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "endo-lib",
   "version": "1.0.0",
   "description": "Put some description here",
-  "keywords": [
-  ],
+  "keywords": [],
   "homepage": "https://github.com/octoblu/lib",
   "bugs": "https://github.com/octoblu/lib/issues",
   "author": {
@@ -50,8 +49,7 @@
     "passport": "^0.3.2",
     "passport-octoblu": "^2.0.1"
   },
-  "peerDependencies": {
-  },
+  "peerDependencies": {},
   "engines": {
     "node": ">=0.8.0",
     "npm": ">=1.2.10"
