--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
   },
   "scripts": {
     "start": "node command.js",
-    "test": "mocha"
+    "test": "istanbul cover _mocha -- -R spec --require coffee-coverage/register-istanbul"
   },
   "devDependencies": {
+    "@octoblu/shmock": "^0.7.2",
     "chai": "^3.5.0",
-    "istanbul": "^0.4.0",
-    "mocha": "^2.3.4",
+    "coffee-coverage": "^1.0.1",
+    "coffee-script": "^1.10.0",
+    "istanbul": "^0.4.3",
+    "mocha": "^2.4.5",
     "mocha-istanbul": "^0.2.0",
     "passport-strategy": "^1.0.0",
     "request": "^2.66.0",
-    "@octoblu/shmock": "^0.7.2",
-    "sinon": "^1.17.2",
+    "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0"
   },
   "dependencies": {
