--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "endo-lib",
-  "version": "3.4.0",
+  "version": "4.0.0",
   "description": "Put some description here",
   "keywords": [],
   "homepage": "https://github.com/octoblu/lib",
@@ -45,7 +45,8 @@
     "express-send-error": "^1.1.0",
     "jsonschema": "^1.1.0",
     "lodash": "^4.11.1",
-    "meshblu-encryption": "^1.0.3",
+    "meshblu-encryption": "^2.0.0",
+    "meshblu-http": "^5.3.2",
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
     "passport-octoblu": "^2.0.1"
