--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "endo-core",
-  "version": "12.2.1",
+  "version": "12.3.0",
   "description": "Put some description here",
   "keywords": [],
   "homepage": "https://github.com/octoblu/endo-core",
@@ -50,7 +50,8 @@
     "meshblu-http": "^5.3.2",
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
-    "passport-octoblu": "^2.0.1"
+    "passport-octoblu": "^2.0.1",
+    "serve-favicon": "^2.3.0"
   },
   "peerDependencies": {},
   "engines": {
