--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "endo-core",
-  "version": "14.0.1",
+  "version": "14.1.0",
   "description": "Put some description here",
   "keywords": [],
   "homepage": "https://github.com/octoblu/endo-core",
@@ -19,13 +19,14 @@
     "test": "istanbul cover _mocha -- -R spec --require coffee-coverage/register-istanbul"
   },
   "devDependencies": {
-    "@octoblu/shmock": "^0.7.2",
+    "shmock": "^0.7.2",
     "chai": "^3.5.0",
     "coffee-coverage": "^1.0.1",
     "coffee-script": "^1.10.0",
     "istanbul": "^0.4.3",
     "mocha": "^2.4.5",
     "mocha-istanbul": "^0.2.0",
+    "mock-fs": "^3.11.0",
     "passport-strategy": "^1.0.0",
     "request": "^2.66.0",
     "server-destroy": "^1.0.1",
@@ -38,6 +39,7 @@
     "cookie-parser": "^1.4.1",
     "cookie-session": "^2.0.0-alpha.1",
     "cors": "^2.5.3",
+    "cson": "^3.0.2",
     "debug": "^2.2.0",
     "errorhandler": "^1.4.2",
     "express": "^4.13.3",
@@ -52,7 +54,8 @@
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
     "passport-octoblu": "^2.0.1",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "shmock": "^0.7.2"
   },
   "peerDependencies": {},
   "engines": {
