--- a/package.json
+++ b/package.json
@@ -16,20 +16,23 @@
   },
   "scripts": {
     "start": "node command.js",
-    "test": "istanbul cover _mocha -- -R spec --require coffee-coverage/register-istanbul && mocha --reporter json > coverage/mocha.json"
+    "test": "mocha",
+    "coverage": "nyc npm test",
+    "mocha:json": "env NPM_ENV=test mocha --reporter json > coverage/mocha.json",
+    "test:watch": "mocha -w -R mocha-multi --reporter-options spec=-,mocha-osx-reporter=-"
   },
   "devDependencies": {
-    "shmock": "^0.7.2",
     "chai": "^3.5.0",
-    "coffee-coverage": "^1.0.1",
     "coffee-script": "^1.10.0",
-    "istanbul": "^0.4.3",
     "mocha": "^2.4.5",
-    "mocha-istanbul": "^0.2.0",
+    "mocha-multi": "^0.9.1",
+    "mocha-osx-reporter": "^0.1.2",
     "mock-fs": "^3.11.0",
+    "nyc": "^8.3.0",
     "passport-strategy": "^1.0.0",
     "request": "^2.66.0",
     "server-destroy": "^1.0.1",
+    "shmock": "^0.7.2",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0"
   },
@@ -62,5 +65,16 @@
     "node": ">=0.8.0",
     "npm": ">=1.2.10"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "nyc": {
+    "cache": true,
+    "reporter": [
+      "text-summary",
+      "lcov",
+      "json"
+    ],
+    "extension": [
+      ".coffee"
+    ]
+  }
 }
