--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sinon-chai": "^2.8.0"
   },
   "dependencies": {
+    "@octoblu/connect-http-signature": "^0.1.3",
     "body-parser": "^1.14.1",
     "coffee-script": "^1.10.0",
     "cookie-parser": "^1.4.1",
@@ -50,6 +51,7 @@
     "express-meshblu-healthcheck": "^1.0.1",
     "express-package-version": "0.0.2",
     "express-send-error": "^1.1.0",
+    "fetch-meshblu-public-key": "^1.1.0",
     "jsonschema": "^1.1.0",
     "lodash": "^4.11.1",
     "meshblu-encryption": "^2.0.0",
