--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jsonschema": "^1.1.0",
     "lodash": "^4.11.1",
     "meshblu-encryption": "^2.0.0",
+    "meshblu-firehose-socket.io": "^2.0.0",
     "meshblu-http": "^5.3.2",
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
