--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "endo-core",
-  "version": "14.7.1",
+  "version": "14.8.0",
   "description": "Put some description here",
   "keywords": [],
   "homepage": "https://github.com/octoblu/endo-core",
@@ -28,6 +28,7 @@
     "mocha-multi": "^0.9.1",
     "mocha-osx-reporter": "^0.1.2",
     "mock-fs": "^3.11.0",
+    "moment": "^2.15.1",
     "nyc": "^8.3.0",
     "passport-strategy": "^1.0.0",
     "request": "^2.66.0",
@@ -58,6 +59,7 @@
     "meshblu-encryption": "^2.0.0",
     "meshblu-firehose-socket.io": "^2.0.1",
     "meshblu-http": "^7.4.0",
+    "moment": "^2.15.1",
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
     "passport-octoblu": "^2.0.1",
