--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "endo-core",
-  "version": "14.12.1",
+  "version": "15.0.0",
   "description": "Put some description here",
   "keywords": [],
   "homepage": "https://github.com/octoblu/endo-core",
@@ -24,6 +24,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "coffee-script": "^1.10.0",
+    "fs-cson": "^0.3.2",
     "mocha": "^2.4.5",
     "mocha-multi": "^0.9.1",
     "mocha-osx-reporter": "^0.1.2",
@@ -54,7 +55,7 @@
     "express-package-version": "0.0.2",
     "express-send-error": "^1.1.0",
     "fetch-meshblu-public-key": "^1.1.0",
-    "jsonschema": "^1.1.0",
+    "jsonschema": "^1.1.1",
     "lodash": "^4.11.1",
     "meshblu-encryption": "^2.0.0",
     "meshblu-firehose-socket.io": "^2.0.1",
