--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "endo-core",
-  "version": "18.0.2",
+  "version": "18.0.3",
   "description": "Put some description here",
   "keywords": [],
   "homepage": "https://github.com/octoblu/endo-core",
@@ -25,47 +25,47 @@
     "chai": "^3.5.0",
     "coffee-script": "^1.10.0",
     "fs-cson": "^0.3.2",
-    "mocha": "^2.4.5",
-    "mocha-multi": "^0.9.1",
+    "mocha": "^3.2.0",
+    "mocha-multi": "^0.10.0",
     "mocha-osx-reporter": "^0.1.2",
-    "mock-fs": "^3.11.0",
+    "mock-fs": "^4.1.0",
     "moment": "^2.15.1",
-    "nyc": "^8.3.0",
+    "nyc": "^10.1.2",
     "passport-strategy": "^1.0.0",
-    "request": "^2.66.0",
+    "request": "^2.80.0",
     "server-destroy": "^1.0.1",
     "shmock": "^0.7.2",
-    "sinon": "^1.17.4",
+    "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
-    "socket.io": "^1.5.0"
+    "socket.io": "^1.7.3"
   },
   "dependencies": {
     "@octoblu/connect-http-signature": "^0.1.3",
-    "body-parser": "^1.14.1",
-    "coffee-script": "^1.10.0",
+    "body-parser": "^1.17.1",
+    "coffee-script": "^1.12.4",
     "cookie-parser": "^1.4.1",
-    "cookie-session": "^2.0.0-alpha.1",
+    "cookie-session": "^2.0.0-beta.1",
     "cors": "^2.5.3",
-    "cson": "^3.0.2",
-    "debug": "^2.2.0",
-    "errorhandler": "^1.4.2",
-    "express": "^4.13.3",
-    "express-meshblu-auth": "^7.0.0",
+    "cson": "^4.0.0",
+    "debug": "^2.6.1",
+    "errorhandler": "^1.5.0",
+    "express": "^4.15.2",
+    "express-meshblu-auth": "^9.1.0",
     "express-meshblu-healthcheck": "^1.0.1",
     "express-package-version": "0.0.2",
-    "express-send-error": "^1.1.0",
+    "express-send-error": "^1.2.0",
     "fetch-meshblu-public-key": "^1.1.0",
     "jsonschema": "^1.1.1",
-    "lodash": "^4.11.1",
+    "lodash": "^4.17.4",
     "meshblu-encryption": "^2.0.0",
-    "meshblu-firehose-socket.io": "^2.0.1",
-    "meshblu-http": "^8.1.0",
-    "moment": "^2.15.1",
-    "morgan": "^1.6.1",
+    "meshblu-firehose-socket.io": "^2.2.0",
+    "meshblu-http": "^9.7.3",
+    "moment": "^2.17.1",
+    "morgan": "^1.8.1",
     "passport": "^0.3.2",
-    "passport-octoblu": "^2.0.1",
-    "serve-favicon": "^2.3.0",
-    "shmock": "^0.7.2"
+    "passport-octoblu": "^3.0.1",
+    "serve-favicon": "^2.4.1",
+    "shmock": "^0.8.1"
   },
   "peerDependencies": {},
   "engines": {
